# smt-comp

./: .gitignore  README
current/: COMPETITION_SEED  README.md  experimental.csv  new-divisions.json  pyproject.toml
current/data/: new-divisions.json
current/data/prep/: README.md  SMT-LIB_incremental_benchmarks_all.txt  SMT-LIB_incremental_benchmarks_num_check_sat.csv  incremental.xml
current/data/prep/jobs/: README.md  make_job.sh
current/data/prep/logics/: track_incremental  track_model_validation  track_parallel
current/data/prep/selection/: README-cloud.md  update_webpage.sh
current/data/registration/: download_solvers.sh  solvers.xml  solvers_divisions_prelim2.csv
current/data/results/: find-disagreements.sh
current/data/scoring/: make_mds.sh
current/smtcomp_orga/prep/: SMT-LIB_spaces.tar.xz  find_new_benchmarks.sh  merge_benchmarks_with_sq_statuses.py
current/smtcomp_orga/prep/selection/: README.md  aws_make_selection.sh  make_selection.sh
current/smtcomp_orga/registration/: README.md  SMT-COMP 2022 System Registration.csv  solvers_divisions.csv  solvers_divisions_bestof_2021.csv  solvers_divisions_incrementalfix.csv  solvers_divisions_prelim.csv  solvers_divisions_prelim3.csv  solvers_divisions_prelimproof.csv  update_web_pages.sh
current/smtcomp_orga/results/: join.sh  raw-results-cloud.csv  sq-disagreements-decision.csv
current/smtcomp_orga/results/cloud-parallel/: join.py
current/smtcomp_orga/tools/: web-site-maintenance-README
current/smtcomp_orga/tools/old-scoring-scripts/: Makefile  competition.ml  compute_exp_html.ml  compute_ucore_html.ml  results-control-template.shtml  scoring.ml  toc-template.shtml
current/smtcomp_orga/tools/prep/: download.py  extract_data_from_solvers_divisions.py  prepare_job_xml.py  split_challenge_track.py
current/src/smtcomp_orga/: impact-rules-change.py
current/src/smtcomp_orga.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+542 files in other folders)
